# rust_exercise

aggregate_root/: .gitignore  CLAUDE.md  Cargo.toml
aggregate_root/migrations/: 20250525025220_init.sql
aggregate_root/src/: adapter.rs  domain.rs  handler.rs  infra.rs  kernel.rs  lib.rs  main.rs
aggregate_root/src/adapter/: cli.rs  repository.rs
aggregate_root/src/handler/: user.rs
compose_function/src/: main.rs
pipeline/src/: main.rs
