[package]
name = "aggregate_root"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "user-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.28", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["sqlite", "uuid", "chrono", "runtime-tokio"] }
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
